Cai dat cac handler truy xuat CSDL

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongodb": "^6.16.0"
   },
   "devDependencies": {
     "@eslint/css": "^0.8.1",
