--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.16.0",
     "multer": "^2.0.1",
+    "nanoid": "^3.3.11",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
